MYB-428 Add the released version of Sling Explorer to our project, and redeploy it as part of the reinstall script

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,27 @@
        </plugins>
       </build>
     </profile>
+
+    <profile>
+        <id>installExplorer</id>
+        <build>
+         <plugins>
+           <plugin>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>maven-sling-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>install-file</id>
+                <goals>
+                  <goal>install</goal>
+                </goals>
+              </execution>
+            </executions>
+           </plugin>
+         </plugins>
+        </build>
+    </profile>
+
   </profiles>
   <repositories>
     <repository>
