MYB-376 Also purge sling/config directory

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -58,7 +58,10 @@
                 </fileset>
                 <fileset>
                   <directory>${sakai3.home}/sling/felix</directory>
-                </fileset>        
+                </fileset>
+                <fileset>
+                    <directory>${sakai3.home}/sling/config</directory>
+                </fileset>
                 <fileset>
                   <directory>${sakai3.home}/sling</directory>
 		          <includes>
