--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,11 @@
   <artifactId>edu.berkeley.myberkeley.base</artifactId>
   <packaging>pom</packaging>
   <version>0.10-SNAPSHOT</version>
-  <name>MyBerkeley</name>
+    <modules>
+        <module>caldav</module>
+        <module>caldav</module>
+    </modules>
+    <name>MyBerkeley</name>
   <url>http://ets.berkeley.edu/</url>
   <issueManagement>
     <system>jira</system>
