--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -71,6 +71,12 @@
           </exclusion>
         </exclusions>      
     </dependency>
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-webdav</artifactId>
+        <version>2.0.0</version>
+        <scope>provided</scope>
+    </dependency>
 
 <!-- jcr -->
     <dependency>
