--- a/caldavtest/pom.xml
+++ b/caldavtest/pom.xml
@@ -80,6 +80,13 @@
         </exclusions>      
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-webdav</artifactId>
+        <version>2.0.0</version>
+        <scope>provided</scope>
+    </dependency>
+
 <!-- jcr -->
     <dependency>
       <groupId>javax.jcr</groupId>
@@ -115,6 +122,14 @@
       <version>4.4</version>
       <scope>test</scope>
     </dependency>
+
+<!-- calendar -->
+      <dependency>
+        <groupId>net.fortuna.ical4j</groupId>
+        <artifactId>ical4j</artifactId>
+        <version>1.0-rc3</version>
+        <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 </project>
