--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -138,6 +138,7 @@
                   <jvmarg value="-XX:MaxPermSize=256m"/>
                   <sysproperty key="felix.fileinstall.dir" value="load"/>
                   <sysproperty key="sling.home" value="sling"/>
+				  <sysproperty key="org.sakaiproject.nakamura.core.port" value="${sling.port}"/>
 				  <sysproperty key="org.mortbay.jetty.ajp.port" value="8010"/>
                   <sysproperty key="myberkeley.home" value="${project.parent.basedir}"/>
                   <sysproperty key="sling.include.nakamura" value="${sling.include.nakamura}"/>
