NOJIRA Fix typo in config param now that server team has fixed it in ServerProtectionServiceImpl

--- a/configs/dev/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.cfg
+++ b/configs/dev/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.cfg
@@ -2,6 +2,6 @@
 # production server, since it opens up the server to XSS attacks.
 
 trusted.paths=/
-tusted.postwhitelist=/
+trusted.postwhitelist=/
 
 
