MYB-417 Add caldav bundle to the MyB launchpad, and run caldav tests by default

--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -67,6 +67,12 @@
               <version>0.10-SNAPSHOT</version>
               <startLevel>30</startLevel>
             </bundle>
+            <bundle>
+              <groupId>edu.berkeley.myberkeley</groupId>
+              <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
+              <version>0.10-SNAPSHOT</version>
+              <startLevel>30</startLevel>
+            </bundle>
           </additionalBundles>
           <bundleExclusions>
             <bundle>
