--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <loaddata.server>http://localhost:8080/</loaddata.server>
     <loaddata.password>admin</loaddata.password>
     <loaddata.numusers>32</loaddata.numusers>
-    <caldav.skiptests>false</caldav.skiptests>
+    <caldav.skiptests>true</caldav.skiptests>
   </properties>
   <profiles>
     <profile>
