NOJIRA Updated config that disables the no-posts rule for dev machines

--- a/configs/dev/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.cfg
+++ b/configs/dev/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.cfg
@@ -1,7 +1,6 @@
 # allows the Ruby integration tests to run. not intended for a 
 # production server, since it opens up the server to XSS attacks.
 
-trusted.paths=/
-trusted.postwhitelist=/
+disable.protection.for.dev.mode=true
 
 
