--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -46,6 +46,31 @@
       </plugin>
     </plugins>
   </build>
+  <!-- repositories for ical4j -->
+  <repositories>
+    <repository>
+      <id>modularity-releases</id>
+      <name>Modularity Maven Repository</name>
+      <url>http://m2.modularity.net.au/releases</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>modularity-snapshots</id>
+      <name>Modularity Snapshot Repository</name>
+      <url>http://m2.modularity.net.au/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
   <dependencies>
 <!-- nakamura packages -->
       <dependency>
