MYB-417 Preparatory refactoring before implementing CalendarWrapper.fromJSON method

--- a/notifications/pom.xml
+++ b/notifications/pom.xml
@@ -183,5 +183,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- myberkeley dependencies -->
+        <dependency>
+            <groupId>edu.berkeley.myberkeley</groupId>
+            <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
+            <version>0.10-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 </project>
