--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -114,7 +114,7 @@
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-webdav</artifactId>
         <version>2.0.0</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
 
 <!-- jcr -->
