--- a/notifications/pom.xml
+++ b/notifications/pom.xml
@@ -206,5 +206,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- sling -->
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.scheduler</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
     </dependencies>
 </project>
