--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -40,6 +40,7 @@
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.5</version>
           <configuration>
             <skip>${caldav.skiptests}</skip>
           </configuration>
