--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -19,6 +19,7 @@
             <plugin>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>maven-launchpad-plugin</artifactId>
+                <version>2.0.6</version>
                 <configuration>
                     <defaultBundleList>
                         <groupId>org.sakaiproject.nakamura</groupId>
@@ -65,12 +66,6 @@
                             <groupId>org.sakaiproject.nakamura</groupId>
                             <artifactId>org.sakaiproject.nakamura.uxloader-myberkeley</artifactId>
                             <version>0.6.0-SNAPSHOT</version>
-                            <startLevel>30</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>edu.berkeley.myberkeley</groupId>
-                            <artifactId>edu.berkeley.myberkeley.notices</artifactId>
-                            <version>0.10-SNAPSHOT</version>
                             <startLevel>30</startLevel>
                         </bundle>
                         <bundle>
@@ -127,6 +122,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>2.2</version>
                 <configuration>
                     <archive>
                         <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
