--- a/notifications/pom.xml
+++ b/notifications/pom.xml
@@ -213,5 +213,12 @@
       <version>2.2.0</version>
     </dependency>
 
+    <!-- commons -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-email</artifactId>
+      <version>1.1</version>
+    </dependency>
+
   </dependencies>
 </project>
