MYB-417 Tweak poms to prevent classloader error when send notification job runs

--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -26,9 +26,9 @@
             <Bundle-Category>myberkeley</Bundle-Category>
             <Import-Package>!sun.misc,*</Import-Package>
             <DynamicImport-Package>sun.misc.*</DynamicImport-Package>
-            <Export-Package>edu.berkeley.myberkeley.caldav.*</Export-Package>
+            <Export-Package>edu.berkeley.myberkeley.caldav.*,net.fortuna.ical4j.*</Export-Package>
             <Embed-Transitive>true</Embed-Transitive>
-            <Embed-Dependency>ical4j,jackrabbit-webdav,backport-util-concurrent</Embed-Dependency>
+            <Embed-Dependency>jackrabbit-webdav,backport-util-concurrent</Embed-Dependency>
             <Include-Resource>{maven-resources}</Include-Resource>
           </instructions>
         </configuration>
