--- a/notifications/pom.xml
+++ b/notifications/pom.xml
@@ -27,7 +27,8 @@
             <Import-Package>!sun.misc,*</Import-Package>
             <DynamicImport-Package>sun.misc.*</DynamicImport-Package>
             <Embed-Transitive>true</Embed-Transitive>
-            <Embed-Dependency>ical4j,backport-util-concurrent</Embed-Dependency>
+            <Embed-Dependency>backport-util-concurrent</Embed-Dependency>
+            <Export-Package>net.fortuna.ical4j.*</Export-Package>
             <Include-Resource>{maven-resources}</Include-Resource>
             <Sling-Initial-Content>
               SLING-INF/content/var/notifications;path:=/var/notifications;overwrite:=true;uninstall:=true
